# MH-MGA

./: .gitignore  Fileprinter.py  LICENSE  README.md  control.py  convexhullarea.py  crossover_mutation.py  deap_objects.py  diversity.py  elite_selection.py  environment.yml  exploratory_plots.py  feasibility.py  fitness.py  generate_offspring.py  hp_tune.py  hpintrun.py  hyperparameter_tuning.py  initiate.py  mh_functions.py  mhmoo.py  plotlogs.py  post_process.py  pyproject.toml  run.py  surrogate.py  termination_criteria.py  timekeeper.py  utils.py
logs/: testprob-z-diversity.csv  testprob-z-evolution.csv  testprob-z-nfitness.csv  testprob-z-nobjective.csv  testprob-z-noptima.csv  testprob-z-noptimality.csv
src/mga/: evaluator.py  mga.py  mhmga.py  mhmoo.py  moopopulation.py  population.py  problem_definition.py
src/mga/commons/: constants.py  numba_overload.py  types.py  utils.py
src/mga/metrics/: diversity.py  fitness.py
src/mga/operators/: crossover.py  mutation.py  selection.py
src/mga/utils/: logger.py  plotting.py  profiling.py  termination.py  types.py  typing.py
tests/integration/: _test_precision_settability.py  _test_precision_update_bad.py  _test_precision_update_good.py  _test_precision_update_warning.py  test_environment.py
tests/unit/mga/: conftest.py  test_mga.py  test_mga_utils_types.py  test_mhmga.py  test_moopop.py  test_operators_crossover.py  test_population.py  test_problem_definition.py
tests/unit/mga/metrics/: test_diversity.py  test_fitness.py
tests/unit/mga/operators/: conftest.py  test_crossover.py  test_mutation.py  test_selection.py
tests/unit/mga/utils/: test_types.py
