[tool.black]
line-length = 120

[tool.pytest.ini_options]
pythonpath = ["src/"]
testpaths = "tests"

[tool.isort]
profile = "black"

[tool.bandit]
exclude_dirs = ["tests"]

[tool.mypy]
exclude = ["tests"]
check_untyped_defs = false
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["setuptools >= 40.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mga"
version = "0.0.1"
description = "meta-heuristic modelling to generate alternatives"
dependencies = ["numba>=0.60", "numpy>=2.1", "scipy>=1.12", "pandas>=2.1", "matplotlib", "seaborn", "pyvista"]

[project.optional-dependencies]
dev = ["bandit", "flake8", "mypy", "black", "coverage", "scipy-stubs"]
test = ["pytest"]

[tool.setuptools.package-data]
"mga" = ["py.typed"]

